# pufferfish

./: .gitignore  RANTINGS.md  README.md  README_TEMPLATE.md  core.py  init_script.py  init_solutions.py  lark_parser.py  main.py  parse_pythonic_syntax.py  puzzles.toml  pyproject.toml  repl.py  run_lark.py  stringify.py  unit_tests.py
pufferfish/: core.py  grammar.py  main.py  repl.py  stringify.py
solutions/: 1295. Find Numbers with Even Number of Digits.puf  1365. How Many Numbers Are Smaller Than the Current Number.puf  2778. Sum of Squares of Special Elements .puf  2859. Sum of Values at Indices With K Set Bits.puf  3005. Count Elements With Maximum Frequency.puf  3010. Divide an Array Into Subarrays With Minimum Cost I.puf  3028. Ant on the Boundary.puf  3038. Maximum Number of Operations With the Same Score I.puf  PWC 250 - Task 1: Smallest Index.puf
